--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -25,6 +25,12 @@ anyhow = { version = "1.0.80", features = ["backtrace"] }
 parking_lot = "0.12.3"
 crossbeam-channel = "0.5.14"
 ctrlc = "3.4.5"
+url = { version = "2.5.4", features = ["serde"] }
+rpc-router = "0.1.3"
+uuid = "1.15.1"
+maplit = "1.0.2"
+signal-hook = "0.3.17"
+chrono = "0.4.40"
 
 [dev-dependencies]
 tempfile = "3.16.0"
